--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@ body {font-size:16px;}
     <h3 class="w3-padding-64" ><b>sehaj small <br>machines</b></h3>
   </div>
   <div class="w3-bar-block">
-    <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
-    <a href="#Products We Deal In" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Product Categories</a> 
-    <a href="#videos of the products" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">videos</a> 
-    <a href="#Location of the factory" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">find us</a> 
-    <a href="#Contact." onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">contact us</a> 
+    <a href="/#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
+    <a href="/#Products We Deal In" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Product Categories</a> 
+    <a href="/#videos of the products" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">videos</a> 
+    <a href="/#Location of the factory" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">find us</a> 
+    <a href="/#Contact." onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">contact us</a> 
   </div>
 </nav>
 
@@ -65,20 +65,18 @@ body {font-size:16px;}
         <br> <br>
   <div class="w3-container" style="margin-top:22px" id="showcase">
     <h1><b>SEHAJ SMALL MACHINES,BATALA</b></h1>
-    <h2 class="w3-xxxlarge w3-text-red"><b>Products We Deal In</b></h2>
+    <h2 id="Products We Deal In" class="w3-xxxlarge w3-text-red"><b>Products We Deal In</b></h2>
     <hr style="width:50px;border:5px solid red" class="w3-round">
   </div>
 
 
-  
+
   
     <section class = "typecard-container">
-  
-
       <!-- machine  -->
   
       <div class="typecard">
-        <a href="#">
+        <a href="/wallnut_peeler_mac.html">
           <div>
             <img class="typecard-img" src="media/images/wallnut_peeler_1.JPG" alt="">
           </div>
@@ -92,7 +90,7 @@ body {font-size:16px;}
 
  
         <div class="quote-button-container" >
-            <a href="#contact." class ="quote-button">
+            <a href="/#Contact." class ="quote-button">
               get quote for your machine
             </a>
           </div>
@@ -105,8 +103,8 @@ body {font-size:16px;}
   
  
 
-  <!-- Designers -->
-  <section class="w3-container" id="designers" style="margin-top:75px">
+  <!-- videos of products -->
+  <section id="videos of the products" class="w3-container" id="designers" style="margin-top:75px">
     <h2 class="w3-xxxlarge w3-text-red"><b>videos of the products</b></h2>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <div class="video-container">
@@ -134,7 +132,7 @@ body {font-size:16px;}
 
 
   <!-- location -->
-  <div class="w3-container" id="services" style="margin-top:75px">
+  <div id="Location of the factory" class="w3-container" id="services" style="margin-top:75px">
     <h2 class="w3-xxxlarge w3-text-red"><b>Location of the factory</b></h2>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d211.89457752171896!2d75.19567260305067!3d31.816461632297862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391bc36907e83c45%3A0x22f67b5ec017b3af!2sSehaj%20Small%20Machines.!5e0!3m2!1sen!2sin!4v1646669217202!5m2!1sen!2sin" width="95%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -142,7 +140,7 @@ body {font-size:16px;}
   
   
   <!-- Contact -->
-  <div class="w3-container" id="contact" style="margin-top:75px">
+  <div id="Contact."class="w3-container" id="contact" style="margin-top:75px">
     <h2 class="w3-xxxlarge w3-text-red"><b>Contact.</b></h2>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <h2><b>CALL US FOR MORE DETAILS</b></h2>
