--- a/index.html
+++ b/index.html
@@ -4,27 +4,48 @@
 
 <head>
 
-<title>Sehaj Small Machine ,Top Machine Manufactures of today | walnut peeler Machine | Bulding
-    Construction | Concrete Mixture Machines | Block Making Machines | Dies for machines</title>
+  <title>Sehaj Small Machines, Pioneer Manufacturer of - walnut peeler Machine | Bulding
+    Construction | Concrete Mixture Machines | Block Making Machines | Dies for machines in India</title>
 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="keywords"
-content="machines, factory, construction machinery, building construction, block maching dies, mixture machines ,batala, sehaj small machines, manufacture, brick, brick construction , construction, best machines, fine quality, top manufactures, trusted machines, trusted, high quality machines, lift machines , concrete mixtures, lift mixtures, blocks, punjab, india, brick machines manufactures, bricks making  " />
-<meta name="description"
-content="Manufactures of Building Construction and walnut peeler Machines as well as products related to them at Batala,Punjab,India" />
+  <meta name="keywords"
+    content="building construction machinery, walnut peeler machines,block macking machines, brick making machines,concrete mixture machines, block making machine dies,brick making machine dies,top building construction machinery,Batala" />
+  <meta name="description"
+    content="Manufacturer of walnut peeler Machines and Building Construction Machines as well as products related to them at Batala,Punjab,India" />
 
 
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-<link rel="stylesheet" href="css/machine_photos.css">
-<style>
-body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
-body {font-size:16px;}
-.w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
-.w3-half img:hover{opacity:1}
-</style>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+  <link rel="stylesheet" href="css/machine_photos.css">
+  <link rel="stylesheet" href="css/utilities.css">
+  <style>
+    body,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
+      font-family: "Poppins", sans-serif
+    }
+
+    body {
+      font-size: 16px;
+    }
+
+    .w3-half img {
+      margin-bottom: -6px;
+      margin-top: 16px;
+      opacity: 0.8;
+      cursor: pointer
+    }
+
+    .w3-half img:hover {
+      opacity: 1
+    }
+
+  </style>
 
 </head>
 
@@ -32,53 +53,57 @@ body {font-size:16px;}
 
 <body>
 
-<!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
-  <div class="w3-container">
-    <h3 class="w3-padding-64" ><b>sehaj small <br>machines</b></h3>
-  </div>
-  <div class="w3-bar-block">
-    <a href="/#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
-    <a href="/#Products We Deal In" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Product Categories</a> 
-    <a href="/#videos of the products" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">videos</a> 
-    <a href="/#Location of the factory" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">find us</a> 
-    <a href="/#Contact." onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">contact us</a> 
-  </div>
-</nav>
+  <!-- Sidebar/menu -->
+  <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;"
+    id="mySidebar"><br>
+    <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft"
+      style="width:100%;font-size:22px">Close Menu</a>
+    <div class="w3-container">
+      <h3 class="w3-padding-64"><b>sehaj small machines<br>machines</b></h3>
+    </div>
+    <div class="w3-bar-block">
+      <a href="/#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>
+      <a href="/#Products We Deal In" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Product
+        Categories</a>
+      <a href="/#videos of the products" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">videos</a>
+      <a href="/#Location of the factory" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">find us</a>
+      <a href="/#Contact." onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">contact us</a>
+    </div>
+  </nav>
 
 
-<!-- Top menu on small screens -->
-<header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
-  <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
-  <span>sehaj small machine</span>
-</header>
+  <!-- Top menu on small screens -->
+  <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
+    <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
+    <span>sehaj small machine</span>
+  </header>
 
-<!-- Overlay effect when opening sidebar on small screens -->
-<div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+  <!-- Overlay effect when opening sidebar on small screens -->
+  <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu"
+    id="myOverlay"></div>
 
-<!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:340px;margin-right:40px">
+  <!-- !PAGE CONTENT! -->
+  <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
-  <!-- Header -->
+    <!-- Header -->
 
-        <br> <br>
-  <div class="w3-container" style="margin-top:22px" id="showcase">
-    <h1><b>SEHAJ SMALL MACHINES,BATALA</b></h1>
-    <h2 id="Products We Deal In" class="w3-xxxlarge w3-text-red"><b>Products We Deal In</b></h2>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
-  </div>
+    <br> <br>
+    <div class="w3-container" style="margin-top:22px" id="showcase">
+      <h1><b>SEHAJ SMALL MACHINES,BATALA</b></h1>
+      <h2 id="Products We Deal In" class="w3-xxxlarge w3-text-red"><b>Products We Deal In</b></h2>
+      <hr style="width:50px;border:5px solid red" class="w3-round">
+    </div>
 
 
 
-  
-    <section class = "typecard-container">
+
+    <div class="typecard-container">
       <!-- machine  -->
-  
+
       <div class="typecard">
-        <a href="/wallnut_peeler_mac.html">
+        <a href="/walnut_peeler_machine.html">
           <div>
-            <img class="typecard-img" src="media/images/wallnut_peeler_1.JPG" alt="">
+            <img class="typecard-img" src="media/images/walnut_peeler_1.JPG" alt="">
           </div>
           <div class="typecard-text">
             <b>walnut peeler machine</b>
@@ -86,98 +111,83 @@ body {font-size:16px;}
         </a>
       </div>
 
-    </section>
-
- 
-        <div class="quote-button-container" >
-            <a href="/#Contact." class ="quote-button">
-              get quote for your machine
-            </a>
-          </div>
-    
-
-
-
-  
-
-  
- 
-
-  <!-- videos of products -->
-  <section id="videos of the products" class="w3-container" id="designers" style="margin-top:75px">
-    <h2 class="w3-xxxlarge w3-text-red"><b>videos of the products</b></h2>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
-    <div class="video-container">
-        <video width="320" height="240"  controls>
-            <source src="media/videos/wallnut_peeler (1).mp4" type="video/mp4">
-          Your browser does not support the video tag.
-          </video>
-
-          <video width="320" height="240"  controls>
-            <source src="media/videos/wallnut_peeler (2).mp4" type="video/mp4">
-          Your browser does not support the video tag.
-          </video>
-
-          <video width="320" height="240"  controls>
-            <source src="media/videos/wallnut_peeler (3).mp4" type="video/mp4">
-          Your browser does not support the video tag.
-          </video>
-
-          <video width="320" height="240"  controls>
-            <source src="media/videos/wallnut_peeler (4).mp4" type="video/mp4">
-          Your browser does not support the video tag.
-          </video>
     </div>
-</section>
 
 
-  <!-- location -->
-  <div id="Location of the factory" class="w3-container" id="services" style="margin-top:75px">
-    <h2 class="w3-xxxlarge w3-text-red"><b>Location of the factory</b></h2>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d211.89457752171896!2d75.19567260305067!3d31.816461632297862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391bc36907e83c45%3A0x22f67b5ec017b3af!2sSehaj%20Small%20Machines.!5e0!3m2!1sen!2sin!4v1646669217202!5m2!1sen!2sin" width="95%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-  </div>
-  
-  
-  <!-- Contact -->
-  <div id="Contact."class="w3-container" id="contact" style="margin-top:75px">
-    <h2 class="w3-xxxlarge w3-text-red"><b>Contact.</b></h2>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
-    <h2><b>CALL US FOR MORE DETAILS</b></h2>
-    <h3>tel:+91-998-810-1722</h3>
-    <a style =
-   "background-color: #f44336;
+    <div class="quote-button-container">
+      <a href="/#Contact." class="quote-button">
+        get quote for your machine
+      </a>
+    </div>
+
+    <!-- videos of products -->
+    <div id="videos of the products" class="w3-container" id="designers" style="margin-top:75px">
+      <h2 class="w3-xxxlarge w3-text-red"><b>videos of the products</b></h2>
+      <hr style="width:50px;border:5px solid red" class="w3-round">
+      <div class="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/hV2NAKxJ7jg" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/pZ4c0MgAB5M" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+
+      </div>
+    </div>
+
+
+    <!-- location -->
+    <div id="Location of the factory" class="w3-container" id="services" style="margin-top:75px">
+      <h2 class="w3-xxxlarge w3-text-red"><b>Location of the factory</b></h2>
+      <hr style="width:50px;border:5px solid red" class="w3-round">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d211.89457752171896!2d75.19567260305067!3d31.816461632297862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391bc36907e83c45%3A0x22f67b5ec017b3af!2sSehaj%20Small%20Machines.!5e0!3m2!1sen!2sin!4v1646669217202!5m2!1sen!2sin"
+        width="95%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+
+
+    <!-- Contact -->
+    <div id="Contact." class="w3-container" id="contact" style="margin-top:75px">
+      <h2 class="w3-xxxlarge w3-text-red"><b>Contact.</b></h2>
+      <hr style="width:50px;border:5px solid red" class="w3-round">
+      <h2><b>CALL US FOR MORE DETAILS</b></h2>
+      <h3>tel:+91-998-810-1722</h3>
+      <a style="background-color: #f44336;
     color: white;
     padding: 14px 25px;
     text-align: center;
     text-decoration: none;
     display: inline-block;" href="tel:+91-998-810-1722">Click to Call Us!</a>
+    </div>
   </div>
-</div>
 
-<!-- W3.CSS Container -->
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered BY : Sehaj small Machines</p></div>
+  <!-- W3.CSS Container -->
+  <div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px">
+    <p class="w3-right">Powered BY : Sehaj small Machines</p>
+  </div>
 
-<script>
-// Script to open and close sidebar
-function w3_open() {
-  document.getElementById("mySidebar").style.display = "block";
-  document.getElementById("myOverlay").style.display = "block";
-}
- 
-function w3_close() {
-  document.getElementById("mySidebar").style.display = "none";
-  document.getElementById("myOverlay").style.display = "none";
-}
+  <script>
+    // Script to open and close sidebar
+    function w3_open() {
+      document.getElementById("mySidebar").style.display = "block";
+      document.getElementById("myOverlay").style.display = "block";
+    }
 
-// Modal Image Gallery
-function onClick(element) {
-  document.getElementById("img01").src = element.src;
-  document.getElementById("modal01").style.display = "block";
-  var captionText = document.getElementById("caption");
-  captionText.innerHTML = element.alt;
-}
-</script>
+    function w3_close() {
+      document.getElementById("mySidebar").style.display = "none";
+      document.getElementById("myOverlay").style.display = "none";
+    }
+
+    // Modal Image Gallery
+    function onClick(element) {
+      document.getElementById("img01").src = element.src;
+      document.getElementById("modal01").style.display = "block";
+      var captionText = document.getElementById("caption");
+      captionText.innerHTML = element.alt;
+    }
+  </script>
 
 </body>
 </html>
