--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft"
       style="width:100%;font-size:22px">Close Menu</a>
     <div class="w3-container">
-      <h3 class="w3-padding-64"><b>sehaj small machines<br>machines</b></h3>
+      <h3 class="w3-padding-64"><b>sehaj small<br>machines</b></h3>
     </div>
     <div class="w3-bar-block">
       <a href="/#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>
@@ -73,9 +73,9 @@
 
 
   <!-- Top menu on small screens -->
-  <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
+  <header style="font-size: 6vmin" class="w3-container w3-top w3-hide-large w3-red  w3-padding">
     <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
-    <span>sehaj small machine</span>
+    <span >Sehaj Small Machines</span>
   </header>
 
   <!-- Overlay effect when opening sidebar on small screens -->
@@ -89,7 +89,7 @@
 
     <br> <br>
     <div class="w3-container" style="margin-top:22px" id="showcase">
-      <h1><b>SEHAJ SMALL MACHINES,BATALA</b></h1>
+      <h1  style="word-wrap:normal"><b>SEHAJ SMALL MACHINES, BATALA</b></h1>
       <h2 id="Products We Deal In" class="w3-xxxlarge w3-text-red"><b>Products We Deal In</b></h2>
       <hr style="width:50px;border:5px solid red" class="w3-round">
     </div>
@@ -100,8 +100,8 @@
     <div class="typecard-container">
       <!-- machine  -->
 
-      <div class="typecard">
-        <a href="/walnut_peeler_machine.html">
+
+        <a href="/walnut_peeler_machine.html" class="typecard">
           <div>
             <img class="typecard-img" src="media/images/walnut_peeler_1.JPG" alt="">
           </div>
@@ -109,9 +109,19 @@
             <b>walnut peeler machine</b>
           </div>
         </a>
-      </div>
 
+
+      <a href="/mini_concrete_machine.html" class="typecard">
+        <div>
+          <img class="typecard-img" src="media/images/walnut_peeler_1.JPG" alt="">
+        </div>
+        <div class="typecard-text">
+          <b>mini concrete machine</b>
+        </div>
+      </a>
     </div>
+
+
 
 
     <div class="quote-button-container">
@@ -124,15 +134,19 @@
     <div id="videos of the products" class="w3-container" id="designers" style="margin-top:75px">
       <h2 class="w3-xxxlarge w3-text-red"><b>videos of the products</b></h2>
       <hr style="width:50px;border:5px solid red" class="w3-round">
-      <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/hV2NAKxJ7jg" title="YouTube video player"
+      <div class="video-container" style="display:flex; flex-direction:row; flex-wrap: wrap; column-gap:5vw;padding:3px;justify-content: center;align-items: center;">
+        <div>
+          <iframe width="100%" height="200vh" src="https://www.youtube.com/embed/hV2NAKxJ7jg" title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/pZ4c0MgAB5M" title="YouTube video player"
+        </div>
+        <div>
+        <iframe width="100%" height="200vh" src="https://www.youtube.com/embed/pZ4c0MgAB5M" title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
+        </div>
 
       </div>
     </div>
@@ -142,9 +156,8 @@
     <div id="Location of the factory" class="w3-container" id="services" style="margin-top:75px">
       <h2 class="w3-xxxlarge w3-text-red"><b>Location of the factory</b></h2>
       <hr style="width:50px;border:5px solid red" class="w3-round">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d211.89457752171896!2d75.19567260305067!3d31.816461632297862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391bc36907e83c45%3A0x22f67b5ec017b3af!2sSehaj%20Small%20Machines.!5e0!3m2!1sen!2sin!4v1646669217202!5m2!1sen!2sin"
-        width="95%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d211.89457752171896!2d75.19567260305067!3d31.816461632297862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391bc36907e83c45%3A0x22f67b5ec017b3af!2sSehaj%20Small%20Machines.!5e0!3m2!1sen!2sin!4v1646669217202!5m2!1sen!2sin"
+        width="100%" height="300vh" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 
 
