--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-  <title>Sehaj Small Machines, Pioneer Manufacturer of - walnut peeler Machine | Bulding
+  <title>Sehaj Small Machines, high quality and Durable Machines Manufacturer of - walnut peeler Machine | Bulding
     Construction | Concrete Mixture Machines | Block Making Machines | Dies for machines in India</title>
 
   <meta charset="UTF-8">
@@ -73,7 +73,7 @@
 
 
   <!-- Top menu on small screens -->
-  <header style="font-size: 6vmin" class="w3-container w3-top w3-hide-large w3-red  w3-padding">
+  <header  class="w3-container w3-top w3-hide-large w3-red  w3-padding" style="font-size: 5vmin;">
     <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
     <span >Sehaj Small Machines</span>
   </header>
@@ -103,20 +103,29 @@
 
         <a href="/walnut_peeler_machine.html" class="typecard">
           <div>
-            <img class="typecard-img" src="media/images/walnut_peeler_1.JPG" alt="">
+            <img class="typecard-img" src="media/images/walnut_peeler_1.JPG" alt="walnut peeler machine by sehaj small machines">
           </div>
           <div class="typecard-text">
-            <b>walnut peeler machine</b>
+            <b>Walnut Peeler Machine</b>
           </div>
         </a>
 
 
-      <a href="/mini_concrete_machine.html" class="typecard">
+      <a href="/mini_concrete_mixture_machine.html" class="typecard">
         <div>
-          <img class="typecard-img" src="media/images/walnut_peeler_1.JPG" alt="">
+          <img class="typecard-img" src="media/images/mini_concrete_mixture_machine_1.jpeg" alt="mini concrete mixture machine by sehaj small machines">
         </div>
         <div class="typecard-text">
-          <b>mini concrete machine</b>
+          <b>Mini Concrete Machine</b>
+        </div>
+      </a>
+
+      <a href="/concrete_mixture_machine.html" class="typecard">
+        <div>
+          <img class="typecard-img" src="media/images/concrete_mixture_machine_1.jpeg" alt="concrete mixture machine by sehaj small machines">
+        </div>
+        <div class="typecard-text">
+          <b>Concrete Machine</b>
         </div>
       </a>
     </div>
@@ -126,7 +135,7 @@
 
     <div class="quote-button-container">
       <a href="/#Contact." class="quote-button">
-        get quote for your machine
+        Get Quote For Your Machine
       </a>
     </div>
 
@@ -166,6 +175,8 @@
       <h2 class="w3-xxxlarge w3-text-red"><b>Contact.</b></h2>
       <hr style="width:50px;border:5px solid red" class="w3-round">
       <h2><b>CALL US FOR MORE DETAILS</b></h2>
+      <h2>(OR TO GET QUOTE FOR YOUR MACHINE)</h2>    
+      <strong>95% call attendence!</strong>
       <h3>tel:+91-998-810-1722</h3>
       <a style="background-color: #f44336;
     color: white;
