--- a/index.html
+++ b/index.html
@@ -205,12 +205,12 @@
     }
 
     // Modal Image Gallery
-    function onClick(element) {
-      document.getElementById("img01").src = element.src;
-      document.getElementById("modal01").style.display = "block";
-      var captionText = document.getElementById("caption");
-      captionText.innerHTML = element.alt;
-    }
+//     function onClick(element) {
+//       document.getElementById("img01").src = element.src;
+//       document.getElementById("modal01").style.display = "block";
+//       var captionText = document.getElementById("caption");
+//       captionText.innerHTML = element.alt;
+//     }
   </script>
 
 </body>
