--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
     <!-- Header -->
 
-    <br> <br>
-    <div class="w3-container" style="margin-top:22px" id="showcase">
+
+    <div class="w3-container head"  id="showcase">
       <h1  style="word-wrap:normal"><b>SEHAJ SMALL MACHINES, BATALA</b></h1>
       <h2 id="Products We Deal In" class="w3-xxxlarge w3-text-red"><b>Products We Deal In</b></h2>
       <hr style="width:50px;border:5px solid red" class="w3-round">
@@ -205,12 +205,12 @@
     }
 
     // Modal Image Gallery
-//     function onClick(element) {
-//       document.getElementById("img01").src = element.src;
-//       document.getElementById("modal01").style.display = "block";
-//       var captionText = document.getElementById("caption");
-//       captionText.innerHTML = element.alt;
-//     }
+    // function onClick(element) {
+    //   document.getElementById("img01").src = element.src;
+    //   document.getElementById("modal01").style.display = "block";
+    //   var captionText = document.getElementById("caption");
+    //   captionText.innerHTML = element.alt;
+    // }
   </script>
 
 </body>
