--- a/walnut_peeler_machine.html
+++ b/walnut_peeler_machine.html
@@ -83,9 +83,8 @@ table{
   <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu"
     id="myOverlay"></div>
 
-  <div class="w3-main" style="margin-left:340px;margin-right:40px;display: flex;flex-direction: column;padding:10px; padding-top: 20px;">
+  <div class="w3-main head" style="margin-left:340px;margin-right:40px;display: flex;flex-direction: column;padding:10px;">
     
-    <br><br>
     <H1>Walnut Peeler Machine</H1>
     <p>Fresh walnut nuts green skin cleaning and peeling machine this machine is as per latest technology.</p>
 
@@ -149,9 +148,7 @@ table{
           allowfullscreen></iframe>
       </div>
 
-
-  </div>
-<hr>
+      <hr>
   <div id="Contact." class="w3-container" id="contact" >
     <h2 class="w3-xxxlarge w3-text-red"><b>Contact.</b></h2>
     <hr style="width:50px;border:5px solid red" class="w3-round">
@@ -167,6 +164,10 @@ table{
   display: inline-block;" href="tel:+91-998-810-1722">Click to Call Us!</a>
   </div>
 </div>
+
+
+  </div>
+
 
   <div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px">
     <p class="w3-right">Powered BY : Sehaj small Machines</p>
@@ -199,12 +200,12 @@ table{
     }
 
     // Modal Image Gallery
-//     function onClick(element) {
-//       document.getElementById("img01").src = element.src;
-//       document.getElementById("modal01").style.display = "block";
-//       var captionText = document.getElementById("caption");
-//       captionText.innerHTML = element.alt;
-//     }
+    // function onClick(element) {
+    //   document.getElementById("img01").src = element.src;
+    //   document.getElementById("modal01").style.display = "block";
+    //   var captionText = document.getElementById("caption");
+    //   captionText.innerHTML = element.alt;
+    // }
   </script>
 
 </body>
