--- a/concrete_mixture_machine.html
+++ b/concrete_mixture_machine.html
@@ -79,9 +79,8 @@ table{
   <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu"
     id="myOverlay"></div>
 
-  <div class="w3-main" style="margin-left:340px;margin-right:40px;display: flex;flex-direction: column;padding:10px; padding-top: 20px;">
+  <div class="w3-main head" style="margin-left:340px;margin-right:40px;display: flex;flex-direction: column;padding:10px; padding-top: 20px;">
     
-    <br><br>
     <H1>Concrete Mixture Machine</H1>
     <p>Concrete mixture machine manufactured by sehaj small machines known for strong and durable machines</p>
 
@@ -126,25 +125,26 @@ table{
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
       </div> -->
+      <hr>
+      <div id="Contact." class="w3-container" id="contact">
+        <h2 class="w3-xxxlarge w3-text-red"><b>Contact.</b></h2>
+        <hr style="width:50px;border:5px solid red" class="w3-round">
+        <h2><b>CALL US FOR MORE DETAILS</b></h2>
+        <h2>(OR TO GET QUOTE FOR YOUR MACHINE)</h2>    
+        <strong>95% call attendence!</strong>
+        <h3>tel:+91-998-810-1722</h3>
+        <a style="background-color: #f44336;
+      color: white;
+      padding: 14px 25px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;" href="tel:+91-998-810-1722">Click to Call Us!</a>
+      </div>
 
 
   </div>
-  <hr>
-  <div id="Contact." class="w3-container" id="contact">
-    <h2 class="w3-xxxlarge w3-text-red"><b>Contact.</b></h2>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
-    <h2><b>CALL US FOR MORE DETAILS</b></h2>
-    <h2>(OR TO GET QUOTE FOR YOUR MACHINE)</h2>    
-    <strong>95% call attendence!</strong>
-    <h3>tel:+91-998-810-1722</h3>
-    <a style="background-color: #f44336;
-  color: white;
-  padding: 14px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;" href="tel:+91-998-810-1722">Click to Call Us!</a>
-  </div>
-</div>
+
+
 
   <div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px">
     <p class="w3-right">Powered BY : Sehaj small Machines</p>
