--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <img class="typecard-img" src="media/images/mini_concrete_mixture_machine_1.jpeg" alt="mini concrete mixture machine by sehaj small machines">
         </div>
         <div class="typecard-text">
-          <b>Mini Concrete Machine</b>
+          <b>Mini Concrete Mixer Machine</b>
         </div>
       </a>
 
@@ -125,7 +125,7 @@
           <img class="typecard-img" src="media/images/concrete_mixture_machine_1.jpeg" alt="concrete mixture machine by sehaj small machines">
         </div>
         <div class="typecard-text">
-          <b>Concrete Machine</b>
+          <b>Concrete Mixer Machine</b>
         </div>
       </a>
     </div>
@@ -204,13 +204,7 @@
       document.getElementById("myOverlay").style.display = "none";
     }
 
-    // Modal Image Gallery
-    // function onClick(element) {
-    //   document.getElementById("img01").src = element.src;
-    //   document.getElementById("modal01").style.display = "block";
-    //   var captionText = document.getElementById("caption");
-    //   captionText.innerHTML = element.alt;
-    // }
+
   </script>
 
 </body>
