--- a/walnut_peeler_machine.html
+++ b/walnut_peeler_machine.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Walnut Peeler Machine by sehaj small machines batala</title>
+  <title>Walnut Peeler Machine by sehaj small machines, batala</title>
   <meta name="keywords"
     content="walnut peeler machines,walnut ,green walnut,fresh walnut peeling machine,walnut sheelne wali machine,walnut cleaning machine,by sehaj small machines,walnut chilne wali machine, chilene, cleaning machine,cleaning,Batala, pioneerproducers" />
-  <meta name="description" content="Fresh walnut nuts green skin cleaning and peeling machine this machine is as per latest technology by sehaj small machines">
+  <meta name="description" content="we are known for the first ones to develop this machine in india">
 
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
@@ -73,7 +73,7 @@ table{
     </div>
   </nav>
 
-  <header class="w3-container w3-top w3-hide-large w3-red  w3-padding" style="font-size: 6vmin;">
+  <header class="w3-container w3-top w3-hide-large w3-red  w3-padding" style="font-size: 2vh;">
     <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
     <span >sehaj small machine</span>
   </header>
@@ -104,7 +104,7 @@ table{
                   alt="image of the walnut peeler machine" onclick="change_pic(this)"
                   style="border-style: dashed; border-color: black; border-width: 0.2em;">  
               <img id="secondary-img2" height="20%" src="media/images/walnut_peeler_2.jpeg"
-                  alt="second image of wallnut peeler machine" onclick="change_pic(this)">
+                  alt="second image of walnut peeler machine" onclick="change_pic(this)">
             </div>
           
 
@@ -199,13 +199,6 @@ table{
       document.getElementById("myOverlay").style.display = "none";
     }
 
-    // Modal Image Gallery
-    // function onClick(element) {
-    //   document.getElementById("img01").src = element.src;
-    //   document.getElementById("modal01").style.display = "block";
-    //   var captionText = document.getElementById("caption");
-    //   captionText.innerHTML = element.alt;
-    // }
   </script>
 
 </body>
