--- a/mini_concrete_mixture_machine.html
+++ b/mini_concrete_mixture_machine.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Concrete Mixture Machine by sehaj small machines batala</title>
+    <title>Mini Concrete Mixer Machine by Sehaj Small Machines Batala,Punjab,India,</title>
     <meta name="keywords"
     content="mini,concrete,mixture,machine,high,quality,premium ,supreme,low cost, cost effective,durable,batala, sehaj small machine" />
     <meta name="description" content="in Budget high quality,cost effective and durable mini concrete machine by sehaj small machines">
@@ -72,7 +72,7 @@ table{
         </div>
     </nav>
 
-    <header class="w3-container w3-top w3-hide-large w3-red  w3-padding" style="font-size: 6vmin;">
+    <header class="w3-container w3-top w3-hide-large w3-red  w3-padding" style="font-size: 2vh;">
         <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
         <span>sehaj small machine</span>
     </header>
@@ -103,15 +103,15 @@ table{
                 <div class="machine-card-imgs-secondary-container" >
                     <img id="secondary-img1" height="18%" src="media/images/mini_concrete_mixture_machine_1.jpeg"
                         style="border-style: dashed; border-color: black; border-width: 0.2em;"
-                        alt="image of the walnut peeler machine" onclick="change_pic(this)">
+                        alt="image of the mini concrete mixer machine" onclick="change_pic(this)">
                     <img id="secondary-img2" height="18%" src="media/images/mini_concrete_mixture_machine_2.jpeg"
-                        alt="image of the walnut peeler machine" onclick="change_pic(this)">
+                        alt="second image of the mini concrete mixer machine" onclick="change_pic(this)">
                     <img id="secondary-img3" height="18%" src="media/images/mini_concrete_mixture_machine_3.jpeg"
-                        alt="image of the walnut peeler machine" onclick="change_pic(this)">
+                        alt="third image of the mini concrete mixer machine" onclick="change_pic(this)">
                     <img id="secondary-img4" height="18%" src="media/images/mini_concrete_mixture_machine_4.jpeg"
-                        alt="image of the walnut peeler machine" onclick="change_pic(this)">
+                        alt="forth image of the mini concrete mixer machine" onclick="change_pic(this)">
                     <img id="secondary-img5" height="18%" src="media/images/mini_concrete_mixture_machine_5.jpeg"
-                        alt="image of the walnut peeler machine" onclick="change_pic(this)">
+                        alt="fifth image of the mini concrete mixer machine" onclick="change_pic(this)">
 
 
                 </div>
@@ -201,13 +201,7 @@ table{
             document.getElementById("myOverlay").style.display = "none";
         }
 
-        // Modal Image Gallery
-        // function onClick(element) {
-        //     document.getElementById("img01").src = element.src;
-        //     document.getElementById("modal01").style.display = "block";
-        //     var captionText = document.getElementById("caption");
-        //     captionText.innerHTML = element.alt;
-        // }
+
     </script>
 
 </body>
