--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 
 <head>
 
-  <title>Sehaj Small Machines, high quality and Durable Machines Manufacturer of - walnut peeler Machine | Bulding
-    Construction | Concrete Mixture Machines | Block Making Machines | Dies for machines in India</title>
+  <title>Sehaj Small Machines, Manufacturer of high quality and Durable walnut peeler Machines, Concrete Mixer Machines, Block and Brick Making Machines and their moulds, in India</title>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +12,7 @@
   <meta name="keywords"
     content="building construction machinery, walnut peeler machines,block macking machines, brick making machines,concrete mixture machines, block making machine dies,brick making machine dies,top building construction machinery,Batala" />
   <meta name="description"
-    content="Manufacturer of walnut peeler Machines and Building Construction Machines as well as products related to them at Batala,Punjab,India" />
+    content="Our Machines Are Known For long Durable and cost-effective machines" />
 
 
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -73,7 +72,7 @@
 
 
   <!-- Top menu on small screens -->
-  <header  class="w3-container w3-top w3-hide-large w3-red  w3-padding" style="font-size: 5vmin;">
+  <header  class="w3-container w3-top w3-hide-large w3-red  w3-padding" style="font-size: 2vh ;">
     <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
     <span >Sehaj Small Machines</span>
   </header>
@@ -83,12 +82,12 @@
     id="myOverlay"></div>
 
   <!-- !PAGE CONTENT! -->
-  <div class="w3-main" style="margin-left:340px;margin-right:40px">
+  <div class="w3-main head" style="margin-left:340px;margin-right:40px">
 
     <!-- Header -->
 
 
-    <div class="w3-container head"  id="showcase">
+    <div class="w3-container"  id="showcase">
       <h1  style="word-wrap:normal"><b>SEHAJ SMALL MACHINES, BATALA</b></h1>
       <h2 id="Products We Deal In" class="w3-xxxlarge w3-text-red"><b>Products We Deal In</b></h2>
       <hr style="width:50px;border:5px solid red" class="w3-round">
@@ -128,6 +127,15 @@
           <b>Concrete Mixer Machine</b>
         </div>
       </a>
+
+      <a href="/plc_brick_making_machine.html" class="typecard">
+        <div>
+          <img class="typecard-img" src="media/images/plc_brick_making_machine_2.jpeg" alt="Fully Automatic Fly Ash Brick Making Machine by sehaj small machines">
+        </div>
+        <div class="typecard-text">
+          <b>Fully Automatic Fly Ash Brick Making Machine</b>
+        </div>
+      </a>
     </div>
 
 
@@ -155,6 +163,10 @@
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
+        </div>
+        <div>
+          <iframe width="100%" height="200vh" src="https://www.youtube.com/embed/aTvZ4PlsHBY" title="YouTube video player" 
+          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
       </div>
@@ -184,7 +196,7 @@
     text-align: center;
     text-decoration: none;
     display: inline-block;" href="tel:+91-998-810-1722">Click to Call Us!</a>
-    </div>
+    </div> 
   </div>
 
   <!-- W3.CSS Container -->
