--- a/walnut_peeler_machine.html
+++ b/walnut_peeler_machine.html
@@ -75,7 +75,7 @@ table{
 
   <header class="w3-container w3-top w3-hide-large w3-red  w3-padding" style="font-size: 2vh;">
     <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
-    <span >sehaj small machine</span>
+    <span>Sehaj Small Machines</span>
   </header>
 
   <!-- Overlay effect when opening sidebar on small screens -->
@@ -112,6 +112,10 @@ table{
 
         <table >
           <tr>
+            <th>Price</th>
+            <td>Rs 1,50,000 + G.S.T(extra)</td>
+        </tr>
+          <tr>
             <th>Capacity</th>
             <td>400kg</td>
           </tr>
@@ -146,6 +150,9 @@ table{
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
+          <iframe width="60%" height="350px" src="https://www.youtube.com/embed/aTvZ4PlsHBY" title="YouTube video player" 
+          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
       </div>
 
       <hr>
