--- a/mini_concrete_mixture_machine.html
+++ b/mini_concrete_mixture_machine.html
@@ -7,7 +7,7 @@
     <title>Mini Concrete Mixer Machine by Sehaj Small Machines Batala,Punjab,India,</title>
     <meta name="keywords"
     content="mini,concrete,mixture,machine,high,quality,premium ,supreme,low cost, cost effective,durable,batala, sehaj small machine" />
-    <meta name="description" content="in Budget high quality,cost effective and durable mini concrete machine by sehaj small machines">
+    <meta name="description" content="in Budget high quality,cost effective and durable mini concrete mixer machine by sehaj small machines">
 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
@@ -74,7 +74,7 @@ table{
 
     <header class="w3-container w3-top w3-hide-large w3-red  w3-padding" style="font-size: 2vh;">
         <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
-        <span>sehaj small machine</span>
+        <span>Sehaj Small Machines</span>
     </header>
 
     <!-- Overlay effect when opening sidebar on small screens -->
@@ -119,6 +119,10 @@ table{
             </div>
 
             <table>
+                <tr>
+                    <th>Price</th>
+                    <td>Rs 42,000 + G.S.T(extra)</td>
+                </tr>
                 <tr>
                     <th>Capacity</th>
                     <td>1/2 Bag</td>
