--- a/concrete_mixture_machine.html
+++ b/concrete_mixture_machine.html
@@ -71,7 +71,7 @@ table{
 
   <header class="w3-container w3-top w3-hide-large w3-red  w3-padding" style="font-size: 2vh;">
     <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
-    <span>sehaj small machine</span>
+    <span>Sehaj Small Machines</span>
   </header>
 
   <!-- Overlay effect when opening sidebar on small screens -->
@@ -107,8 +107,16 @@ table{
 
         <table >
           <tr>
+            <th>Price</th>
+            <td>Rs 85,000 + G.S.T(extra)</td>
+        </tr>
+          <tr>
             <th>Capacity</th>
             <td>1 bag</td>
+          </tr>
+          <tr>
+            <th>Powered By</th>
+            <td>Disel Engine</td>
           </tr>
         </table>
         <hr>
